--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ plugins:   [jekyll-sitemap, jekyll-feed,  jekyll-seo-tag]
 
 title:		   "Portfolio Jekyll Theme"
 description: "Powered by Jekyll and GitHub Pages"
-author:      "Paul Le"
+author:      "Oliver Atwood"
 
 collections:
   projects:
