--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -3,8 +3,11 @@
 
 logo: '/assets/img/OA_Logo.png'
 
-intro_title: Personal Mission 10-word Summary
+intro_title: Oliver Atwood
 intro_text: |
+  Landscape // Urban // Architectural Designer
+  Geospatial Analyst
+
   Oliver Atwood is a designer and researcher whose work focuses on the interaction 
   of the built and natural environment at a variety of scales. He is passionate about
   using a data-driven approach to increase the resilience of the built environment
