--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -5,8 +5,8 @@ logo: '/assets/img/OA_Logo.png'
 
 intro_title: Oliver Atwood
 intro_text: |
-  Landscape // Urban // Architectural Designer
-  Geospatial Analyst
+  Landscape // Urban // Architectural Designer <br>
+  Geospatial Analyst <br> <br>
 
   Oliver Atwood is a designer and researcher whose work focuses on the interaction 
   of the built and natural environment at a variety of scales. He is passionate about
