--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -5,13 +5,8 @@ logo: '/assets/img/OA_Logo.png'
 
 intro_title: Oliver Atwood
 intro_text: |
-  Landscape // Urban // Architectural Designer <br>
-  Geospatial Analyst <br> <br>
-
-  Oliver Atwood is a designer and researcher whose work focuses on the interaction 
-  of the built and natural environment at a variety of scales. He is passionate about
-  using a data-driven approach to increase the resilience of the built environment
-  through deployment of nature-based solutions.
+  ##Landscape // Urban // Architectural Designer <br>
+  ##Geospatial Analyst <br> <br>
 
 resume: '/assets/files/OA_CV.pdf'
 resume_link_title: Download Resume
