--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -5,8 +5,8 @@ logo: '/assets/img/OA_Logo.png'
 
 intro_title: Oliver Atwood
 intro_text: |
-  ##Landscape // Urban // Architectural Designer <br>
-  ##Geospatial Analyst <br> <br>
+Landscape // Urban // Architectural Designer <br>
+Geospatial Analyst <br> <br>
 
 resume: '/assets/files/OA_CV.pdf'
 resume_link_title: Download Resume
